--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -72,3 +72,6 @@ jasypt:
   encryptor:
     algorithm: PBEWithMD5AndDES
     password: tlg_it
+properties:
+  business_service:
+    brand_pic_path: \\192.168.1.8\StoreHelper\
